--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <title>React App</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600&display=swap"
+      rel="stylesheet"
+    />
+    <title>Very Useful Tools to Remember</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
