front-end adjusts button component/alert component and create tool component

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
       href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600&display=swap"
       rel="stylesheet"
     />
+    <script src="https://kit.fontawesome.com/04bd710149.js"></script>
+
     <title>Very Useful Tools to Remember</title>
   </head>
   <body>
